--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+server.port=9090
+spring.datasource.url=jdbc:mysql://localhost:3306/java_app
+spring.datasource.username=java_app
+spring.datasource.password=java_app_pass
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+javax.persistence.jdbc.url=mysql://localhost:3306/java_app
+javax.
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
