implementation updated to Krushna's Doc

--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<resources>
+			<resource>
+				<directory>src/resources</directory>
+			</resource>
+		</resources>
 	</build>
 
 </project>
