--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
 		</plugins>
 		<resources>
 			<resource>
-				<directory>src/resources</directory>
+				<directory>src/main/resources</directory>
 			</resource>
 		</resources>
 	</build>
